<resources>
    <string name="app_name">Discator</string>
    <string name="title_activity_artista">ArtistaActivity</string>
    <string name="title_activity_principal">Actividad principal</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_friend">Amigos</string>
    <string name="menu_votaciones">Comentarios</string>
    <string name="menu_ranking">Mejores Discos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_listas">Mis Listas</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="tab_text_1">Informacion</string>
    <string name="tab_text_2">Albumes</string>
    <string-array name="spinner">
        <item>Rock</item>
        <item>Rock Progresivo</item>
        <item>Heavy Metal</item>
        <item>Metal Progresivo</item>
        <item>Thrash Metal</item>
        <item>Death Metal</item>
        <item>Black Metal</item>
        <item>Grunge</item>
    </string-array>
</resources>
