<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_house_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_friend" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/fui_ic_anonymous_white_24dp"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_ranking" />
    </group>

    <item android:title="Listas">
        <menu>
            <item
                android:id="@+id/nav_listas_globales"
                android:icon="@android:drawable/ic_menu_mapmode"
                android:title="@string/menu_listas_globales" />
            <item
                android:id="@+id/nav_listas"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_listas" />
        </menu>
    </item>

</menu>
