<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.proyecto.discator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_friend"
        android:name="com.proyecto.discator.ui.amigos.FriendFragment"
        android:label="@string/menu_friend"
        tools:layout="@layout/fragment_friend" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.proyecto.discator.ui.votaciones.VotacionesFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_votaciones" />

    <fragment
        android:id="@+id/nav_ranking"
        android:name="com.proyecto.discator.ui.albumesFiltro.AlbumesFiltroFragment"
        android:label="@string/menu_ranking"
        tools:layout="@layout/fragment_albumes_filtro" />

    <fragment
        android:id="@+id/nav_listas_globales"
        android:name="com.proyecto.discator.ui.listasGlobales.ListasGlobalesFragment"
        android:label="@string/menu_listas_globales"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_listas"
        android:name="com.proyecto.discator.ui.listas.ListaFragment"
        android:label="@string/menu_listas"
        tools:layout="@layout/fragment_listas" />
</navigation>